tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_array_literal.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Constants:
  0: 1
  1: 2
  2: 3

Instructions:
0000 OpGetBase 50
0002 OpConstant 0
0005 OpConstant 1
0008 OpConstant 2
0011 OpCall 3
0013 OpSetGlobal 0
