tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_closure.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Constants:
  0: <function>
  1: <function>
  2: 2
  3: 3

Instructions:
0000 OpClosure 1 0
0004 OpSetGlobal 14
0007 OpGetGlobal 14
0010 OpConstant 2
0013 OpCall1 
0014 OpSetGlobal 15
0017 OpGetGlobal 15
0020 OpConstant 3
0023 OpCall1 
0024 OpPop
