tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_index_expression.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Constants:
  0: 1
  1: 2
  2: 3
  3: []
  4: 1

Instructions:
0000 OpConstant 0
0003 OpConstant 1
0006 OpConstant 2
0009 OpConstant 3
0012 OpCons 
0013 OpCons 
0014 OpCons 
0015 OpSetGlobal 0
0018 OpGetGlobal 0
0021 OpConstant 4
0024 OpIndex 
0025 OpPop
