tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_nested_scopes.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Parse Errors:
  - Diagnostic { severity: Error, title: "EXPECTED EXPRESSION", code: Some("E031"), error_type: Some(Compiler), message: Some("`let` is a statement and cannot appear in an expression position."), file: Some(""), span: Some(Span { start: Position { line: 4, column: 4 }, end: Position { line: 4, column: 7 } }), labels: [], hints: [Hint { kind: Hint, text: "Move `let` above this expression, or use a block body `{ ... }` if this construct supports it. For lambdas, write `\\x -> { let y = ...; y }`. Match arms require an expression; extract the `let` before `match` (or use a block only if match arms support it).", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], phase: None }
  - Diagnostic { severity: Error, title: "EXPECTED EXPRESSION", code: Some("E031"), error_type: Some(Compiler), message: Some("`let` is a statement and cannot appear in an expression position."), file: Some(""), span: Some(Span { start: Position { line: 6, column: 8 }, end: Position { line: 6, column: 11 } }), labels: [], hints: [Hint { kind: Hint, text: "Move `let` above this expression, or use a block body `{ ... }` if this construct supports it. For lambdas, write `\\x -> { let y = ...; y }`. Match arms require an expression; extract the `let` before `match` (or use a block only if match arms support it).", span: None, label: None, file: None }], suggestions: [], hint_chains: [], related: [], phase: None }
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", code: Some("E034"), error_type: Some(Compiler), message: Some("Unexpected `}` outside of a block."), file: None, span: Some(Span { start: Position { line: 8, column: 4 }, end: Position { line: 8, column: 5 } }), labels: [], hints: [], suggestions: [], hint_chains: [], related: [], phase: None }
  - Diagnostic { severity: Error, title: "UNEXPECTED TOKEN", code: Some("E034"), error_type: Some(Compiler), message: Some("Unexpected `}` outside of a block."), file: None, span: Some(Span { start: Position { line: 9, column: 0 }, end: Position { line: 9, column: 1 } }), labels: [], hints: [], suggestions: [], hint_chains: [], related: [], phase: None }
