tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_simple_arithmetic.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Constants:
  0: 1
  1: 2

Instructions:
0000 OpConstant 0
0003 OpConstantAdd 1
0006 OpPop
