tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_string_concatenation.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Constants:
  0: "Hello"
  1: " "
  2: "World"

Instructions:
0000 OpConstant 0
0003 OpConstantAdd 1
0006 OpConstantAdd 2
0009 OpSetGlobal 0
