tests/snapshots/bytecode/snapshots/snapshot_bytecode__snapshots__bytecode__snapshot_variable_assignment.snap
---
source: tests/snapshots/bytecode/mod.rs
expression: output
---
Compile Errors:
  - Diagnostic { severity: Error, title: "DUPLICATE NAME", code: Some("E001"), error_type: Some(Compiler), message: Some("Duplicate binding: `print` is already defined."), file: Some("test.flx"), span: Some(Span { start: Position { line: 1, column: 0 }, end: Position { line: 1, column: 11 } }), labels: [], hints: [Hint { kind: Hint, text: "Use a different name or remove the previous definition.", span: None, label: None, file: None }, Hint { kind: Hint, text: "", span: Some(Span { start: Position { line: 0, column: 0 }, end: Position { line: 0, column: 0 } }), label: Some("first defined here"), file: None }], suggestions: [], hint_chains: [], related: [] }
